# chessformer

./: README.md
inferencer/: Cargo.toml  README.md  build.sh  main.rs  material_mcts.rs  nn_trt_mcts.rs  semarrier.rs
inferencer/src/: barrier.rs  chess_game.rs  fast_math.rs  main.rs  nn_trt_mcts.rs  semarrier.rs  trt_inferer.rs
trainer/: checkpointer.py  dataset.py  loss.py  trainer.py
trainer/models/: chessformer.py  transformer.py
